uri-tester: Compile regex in JavaScript compatibility mode

AddBlock regexes now are compiled in JavaScript compatibility mode to
avoid the errors happening from using the patterns from
https://easylist-downloads.adblockplus.org/easylist.txt .

https://bugzilla.gnome.org/show_bug.cgi?id=719399